// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`identifier.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | {"a":1, "b":2}
    |  ^^^
  2 | 
=====================================output=====================================
{"a":1, "b":2}

================================================================================
`;

exports[`issue2297.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | {"a":1, "b":2}
    |      ^
  2 | 
=====================================output=====================================
{"a":1, "b":2}

================================================================================
`;
